--- a/build.gradle
+++ b/build.gradle
@@ -10,9 +10,10 @@ repositories {
 }
 
 dependencies {
-    implementation 'com.google.code.gson:gson:2.8.6'
+    implementation 'com.google.code.gson:gson:2.8.9'
     implementation 'org.apache.commons:commons-collections4:4.4'
     implementation 'org.eclipse.jdt:org.eclipse.jdt.core:3.20.0'
+    implementation 'org.json:json:20231013'
     testImplementation platform('org.junit:junit-bom:5.10.0')
     testImplementation 'org.junit.jupiter:junit-jupiter'
 }
