--- a/.gitignore
+++ b/.gitignore
@@ -3,8 +3,10 @@ build/
 !**/src/main/**/build/
 !**/src/test/**/build/
 
-### Ignore resources/A and resources/B directories ###
+
 resources/lang_npe_2/
+resources/key.properties
+
 
 ### IntelliJ IDEA ###
 .idea/
