--- a/build.gradle
+++ b/build.gradle
@@ -12,6 +12,7 @@ repositories {
 dependencies {
 
     implementation 'com.squareup.okhttp3:okhttp:4.9.3'
+    implementation 'org.apache.commons:commons-csv:1.10.0'
     implementation 'com.google.code.gson:gson:2.8.6'
     implementation 'org.apache.commons:commons-collections4:4.4'
     implementation 'org.eclipse.jdt:org.eclipse.jdt.core:3.20.0'
