--- a/build.gradle
+++ b/build.gradle
@@ -15,6 +15,7 @@ dependencies {
     implementation 'org.apache.commons:commons-csv:1.10.0'
     implementation 'com.google.code.gson:gson:2.8.6'
     implementation 'org.apache.commons:commons-collections4:4.4'
+    implementation 'com.opencsv:opencsv:5.5.2'
     implementation 'org.eclipse.jdt:org.eclipse.jdt.core:3.38.0'
     testImplementation platform('org.junit:junit-bom:5.10.0')
     testImplementation 'org.junit.jupiter:junit-jupiter'
